# DN_test

./: .gitignore  README.md
DN_ClientApp/: pyproject.toml
DN_ClientApp/dn_clientapp/: main.py
DN_ClientApp/dn_clientapp/routes/: files.py
DN_ServerApp/: README.md  pyproject.toml
DN_ServerApp/dn_serverapp/: dependencies.py  main.py
DN_ServerApp/dn_serverapp/routers/: files.py
